--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,18 @@
 body {
     background: rgb(210, 255, 190);
     background: linear-gradient(151deg, rgba(210, 255, 190, 1) 0%, rgba(255, 255, 255, 1) 100%);
+    font-family: 'Alegreya SC', serif;
 }
 
 h1 {
-    font-family: 'Roboto Slab', serif;
     font-size: 40px;
     padding: 20px 0;
-    letter-spacing: 3px;
 }
 
 p {
-    font-family: 'Roboto Slab', serif;
     font-size: 25px;
     line-height: 30px;
-}
-
-span {
-    font-family: 'Roboto Slab', serif;
+    padding-bottom: 10px;
 }
 
 footer p {
@@ -61,18 +56,17 @@ footer {
 
 @media only screen and (max-width: 768px) {
     h1 {
-        font-size: 20px;
-        letter-spacing: 1px;
+        font-size: 23px;
     }
 
     p {
-        font-size: 15px;
+        font-size: 16px;
         line-height: 16px;
     }
 
     footer p {
-        font-size: 12px;
-        line-height: 12px;
+        font-size: 15px;
+        line-height: 15px;
     }
 
     .pics img {
@@ -81,6 +75,6 @@ footer {
     }
 
     .pic-container span {
-        font-size: 12px;
+        font-size: 14px;
     }
 }
